- added an icon to the kernel selection UI - added telemetry - moved kernel selection UI to its own react component - call the kernelSelector when pressing the UI

--- a/src/datascience-ui/interactive-common/common.css
+++ b/src/datascience-ui/interactive-common/common.css
@@ -464,6 +464,17 @@ body, html {
     float: left;
 }
 
+.kernel-status-text {
+    float: left;
+    padding-right: 5px;
+}
+
+.kernel-status-icon {
+    float: right;
+    width: 16px;
+    height: 0px;
+}
+
 .kernel-status:hover {
     cursor: pointer;
 }
