changed some pixel and % measurements to em

--- a/src/datascience-ui/interactive-common/common.css
+++ b/src/datascience-ui/interactive-common/common.css
@@ -443,7 +443,7 @@ body, html {
 
 .kernel-status {
     margin-top: 2px;
-    max-width: 350px;
+    max-width: 29em;
     flex: 1;
     display: flex;
     margin-left: auto;
@@ -475,14 +475,14 @@ body, html {
 .kernel-status-server {
     display: grid;
     grid-template-columns: 1fr auto;
-    max-width: 60%;
+    max-width: 16em;
 }
 
 .kernel-status-status {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    max-width: 38%;
+    max-width: 11em;
 }
 
 .kernel-status-icon {
