--- a/src/datascience-ui/interactive-common/common.css
+++ b/src/datascience-ui/interactive-common/common.css
@@ -98,6 +98,13 @@ body, html {
     display: block;
 }
 
+.edit-panel-colorized .cell-wrapper:focus {
+    outline-width: 0px;
+}
+.edit-panel .cell-wrapper:focus {
+    outline-width: 0px;
+}
+
 .cell-outer {
     display:grid;
     grid-template-columns: auto 1fr;
@@ -252,10 +259,14 @@ body, html {
 .code-watermark {
     position: absolute;
     top: 3px;
-    left: 30px;
+    left: 3px;
     z-index: 500;
     font-style: italic;
     color: var(--override-watermark-color, var(--vscode-panelTitle-inactiveForeground));
+}
+
+.code-watermark:focus {
+    outline-width: 0;
 }
 
 .collapse-input-svg-rotate {
