--- a/src/datascience-ui/history-react/interactivePanel.less
+++ b/src/datascience-ui/history-react/interactivePanel.less
@@ -38,11 +38,12 @@
 .cell-result-container {
     margin: 0px;
     display: grid;
+    grid-auto-columns: minmax(0, 1fr);
 }
 
 .cell-outer {
     display:grid;
-    grid-template-columns: auto 1fr 8px;
+    grid-template-columns: auto minmax(0, 1fr) 8px;
     grid-column-gap: 3px;
     width: 100%;
 }
@@ -50,7 +51,7 @@
 
 .cell-output {
     margin: 0px;
-    width: calc(100vw - var(--output-offset-px));
+    width: 100%;
     overflow-x: scroll;
     background: transparent;
 }
