ui removal of vw and fixing of grids

--- a/src/datascience-ui/history-react/interactivePanel.less
+++ b/src/datascience-ui/history-react/interactivePanel.less
@@ -19,7 +19,7 @@
 }
 
 .messages-result-container {
-    width: calc(100vw - var(--messages-offset-px));
+    width: 100%;
 }
 
 .messages-result-container pre {
@@ -69,7 +69,7 @@ xmp {
 }
 
 .markdown-cell-output {
-    width: calc(100vw - var(--output-offset-px));
+    width: 100%;
     overflow-x: scroll;
 }
 
