--- a/src/datascience-ui/interactive-common/common.css
+++ b/src/datascience-ui/interactive-common/common.css
@@ -79,7 +79,7 @@ body, html {
 /* Cell */
 .cell-wrapper {
     margin: 0px;
-    padding: 2px;
+    padding: 2px 5px 2px 2px;
     display: block;
 }
 
